--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
                 <h3>Preprints</h3>
                 <ul>
                     <li>
+                        <b>Where and When to Look? Spatio-temporal Attention for Action Recognition in Videos </b>
+                        <br>
+                        <a href="https://lilimeng1103.wixsite.com/research-site">Lili Meng</a>,
+                        <a href="http://www.zhaobo.me/">Bo Zhao</a>,
+                        <a href="#">Bo Chang</a>,
+                        <a href="http://www.gaohuang.net/">Gao Huang</a>,
+                        <a href="http://www.sfu.ca/~ftung/">Frederick Tung</a>,
+                        <a href="https://www.cs.ubc.ca/~lsigal/">Leonid Sigal</a>
+                        <br> Preprint, 2018.
+                        <br>
+                        [<a href="https://arxiv.org/abs/1810.04511">arXiv</a>]
+                        [<a data-toggle="collapse" href="#meng2018where">BibTeX</a>]
+                        <p />
+                        <div class="collapse" id="meng2018where">
+                            <code>
+                                @article{meng2018where,
+                                <br>&nbsp;  title={Where and When to Look? Spatio-temporal Attention for Action Recognition in Videos},
+                                <br>&nbsp;  author={Meng, Lili and Zhao, Bo and Chang, Bo and Huang, Gao and Tung, Frederick and Sigal, Leonid},
+                                <br>&nbsp;  journal={arXiv preprint arXiv:1810.04511},
+                                <br>&nbsp;  year={2018}
+                                <br>}                                
+                            </code>
+                        </div>
+                        <p />
+                    </li>
+                    <li>
                         <b>Prediction Based on Conditional Distributions of Vine Copulas </b>
                         <br>
                         <a href="#">Bo Chang</a>,
@@ -144,7 +170,7 @@
                         <a href="#">Bo Chang</a>*,
                         <a href="https://lilimeng1103.wixsite.com/research-site">Lili Meng</a>*,
                         <a href="https://sites.google.com/site/ehaberubc/home">Eldad Haber</a>,
-                        <a href="http://www.sfu.ca/~ftung/">Fred Tung</a>,
+                        <a href="http://www.sfu.ca/~ftung/">Frederick Tung</a>,
                         <a href="https://scholar.google.com/citations?user=iTUn4mUAAAAJ">David Begert</a>
                         <br> International Conference on Learning Representations (ICLR), 2018.
                         <br>
@@ -268,7 +294,6 @@
             </div>
         </div>
     </div>
-
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
