--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li class="active"><a href="#home" data-toggle="tab">HOME</a></li>
             <li><a href="#bio" data-toggle="tab">BIO</a></li>
             <li><a href="#publications" data-toggle="tab">PUBLICATIONS</a></li>
+            <li><a href="#blog" data-toggle="tab">BLOG</a></li>
             <li><a href="#contact" data-toggle="tab">CONTACT</a></li>
         </ul>
         <br>
@@ -276,6 +277,15 @@
                 <br>
                 <a href="https://scholar.google.com/citations?user=s9F-vo0AAAAJ"><img src="https://scholar.google.com/intl/en/scholar/images/1x/scholar_logo_64dp.png" class="img-responsive" width="25%"></a>
             </div>
+            <div class="tab-pane fade" id="blog">
+                <h3>Posts</h3>
+                <ul>
+                    <li>
+                        <a href="http://bochang.me/blog/posts/latex/">A Few LaTeX Tips</a>
+                        <br> November 10, 2018
+                    </li>
+                </ul>
+            </div>            
             <div class="tab-pane fade" id="contact">
                 <h3>Address</h3>
                 <address>
