--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <table>
                     <tr>
                         <td width="40%"><img src="pic.jpg" class="img-responsive" width="90%"></td>
-                        <td>I'm a Ph.D. candidate in the <a href="http://www.stat.ubc.ca/">Department of Statistics</a>, <a href="http://www.ubc.ca/">University of British Columbia</a>. My advisor is <a href="http://www.stat.ubc.ca/~harry/">Professor Harry Joe</a>.
+                        <td>I'm a Ph.D. candidate in the <a href="https://www.stat.ubc.ca/">Department of Statistics</a>, <a href="https://www.ubc.ca/">University of British Columbia</a>. My advisor is <a href="https://www.stat.ubc.ca/~harry/">Professor Harry Joe</a>.
                         </td>
                     </tr>
                 </table>
@@ -52,14 +52,14 @@
                 <ul>
                     <li><a href="https://www.stat.ubc.ca/">University of British Columbia</a>, Ph.D. (Statistics), 2014 - Now</li>
                     <li><a href="http://statistics.ucla.edu/">University of California, Los Angeles</a>, M.S. (Statistics), 2011 - 2012</li>
-                    <li><a href="http://english.pku.edu.cn/">Peking University</a>, B.S. (Mathematics), B.A. (Economics), 2007 - 2011</li>
+                    <li><a href="http://english.math.pku.edu.cn/">Peking University</a>, B.S. (Mathematics), B.A. (Economics), 2007 - 2011</li>
                 </ul>
                 <h3>Employment</h3>
                 <ul>
                     <li><a href="https://ai.google/brain-team/">Google Brain</a>, Software Engineering Intern, Summer 2018</li>
                     <li><a href="https://xtract.ai/">Xtract Technologies</a>, Research Intern, Summer 2017</li>
                     <li><a href="https://www.itg.com/">Investment Technology Group</a>, Analyst, 2013 - 2014</li>
-                    <li><a href="http://www.baidu.com/">Baidu</a>, Data Science Intern, 2010 - 2011</li>
+                    <li><a href="https://www.baidu.com/">Baidu</a>, Data Science Intern, 2010 - 2011</li>
                 </ul>
             </div>
             <div class="tab-pane fade" id="publications">
@@ -69,7 +69,7 @@
                         <b>Where and When to Look? Spatio-temporal Attention for Action Recognition in Videos </b>
                         <br>
                         <a href="https://lilimeng1103.wixsite.com/research-site">Lili Meng</a>,
-                        <a href="http://www.zhaobo.me/">Bo Zhao</a>,
+                        <a href="https://www.zhaobo.me/">Bo Zhao</a>,
                         <a href="#">Bo Chang</a>,
                         <a href="http://www.gaohuang.net/">Gao Huang</a>,
                         <a href="http://www.sfu.ca/~ftung/">Frederick Tung</a>,
@@ -142,7 +142,7 @@
                     <li>
                         <b>Modular Generative Adversarial Networks </b>
                         <br>
-                        <a href="http://www.zhaobo.me/">Bo Zhao</a>,
+                        <a href="https://www.zhaobo.me/">Bo Zhao</a>,
                         <a href="#">Bo Chang</a>,
                         <a href="http://jiezequn.me/">Zequn Jie</a>,
                         <a href="https://www.cs.ubc.ca/~lsigal/">Leonid Sigal</a>
@@ -281,7 +281,7 @@
                 <h3>Posts</h3>
                 <ul>
                     <li>
-                        <a href="http://bochang.me/blog/posts/latex/">A Few LaTeX Tips</a>
+                        <a href="https://bochang.me/blog/posts/latex/">A Few LaTeX Tips</a>
                         <br> November 10, 2018
                     </li>
                 </ul>
