--- a/index.html
+++ b/index.html
@@ -281,6 +281,10 @@
                 <h3>Posts</h3>
                 <ul>
                     <li>
+                        <a href="https://bochang.me/blog/posts/bandits/">Stochastic Bandits and UCB Algorithm</a>
+                        <br> December 8, 2018
+                    </li>                    
+                    <li>
                         <a href="https://bochang.me/blog/posts/latex/">A Few LaTeX Tips</a>
                         <br> November 10, 2018
                     </li>
