--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <a href="http://rogermcooke.net/">Roger M Cooke</a>,
                         <a href="https://www.stat.ubc.ca/~harry/">Harry Joe</a>,
                         <a href="#">Bo Chang</a>
-                        <br> Resources for the Future Discussion Paper, 15&mdash;52.
+                        <br> Resources for the Future Discussion Paper, 15&ndash;52.
                         <br>
                         [<a href="https://ssrn.com/abstract=2695063">SSRN</a>]
                         [<a data-toggle="collapse" href="#cooke2015vine">BibTeX</a>]
