--- a/index.html
+++ b/index.html
@@ -140,6 +140,53 @@
                 <h3>Peer-Reviewed Articles</h3>
                 <ul>
                     <li>
+                        <b>AntisymmetricRNN: A Dynamical System View on Recurrent Neural Networks </b>
+                        <br>
+                        <a href="#">Bo Chang</a>,
+                        <a href="https://www.cse.wustl.edu/~mchen/">Minmin Chen</a>,
+                        <a href="https://sites.google.com/site/ehaberubc/home">Eldad Haber</a>,
+                        <a href="https://sites.google.com/view/edchi/">Ed H. Chi</a>
+                        <br> International Conference on Learning Representations (ICLR), 2019.
+                        <br>
+                        [<a href="https://openreview.net/forum?id=ryxepo0cFX">OpenReview</a>]
+                        [<a data-toggle="collapse" href="#chang2019antisymmetric">BibTeX</a>]
+                        <p />
+                        <div class="collapse" id="chang2019antisymmetric">
+                            <code>
+                                @inproceedings{chang2019antisymmetric,
+                                <br>&nbsp; title={AntisymmetricRNN: A Dynamical System View on Recurrent Neural Networks},
+                                <br>&nbsp; author={Chang, Bo and Chen, Minmin and Haber, Eldad and Chi, Ed H},
+                                <br>&nbsp; booktitle={International Conference on Learning Representations},
+                                <br>&nbsp; year={2019},
+                                <br>&nbsp; url={https://openreview.net/forum?id=ryxepo0cFX}
+                                <br> }
+                            </code>
+                        </div>
+                        <p />
+                    </li>
+                    <li>
+                        <b>Vine Copula Structure Learning via Monte Carlo Tree Search </b>
+                        <br>
+                        <a href="#">Bo Chang</a>,
+                        <a href="https://scholar.google.com/citations?user=NdsuWYIAAAAJ">Shenyi Pan</a>,
+                        <a href="https://www.stat.ubc.ca/~harry/">Harry Joe</a>
+                        <br> International Conference on Artificial Intelligence and Statistics (AISTATS), 2019.
+                        <br>
+                        [<a data-toggle="collapse" href="#chang2019vine">BibTeX</a>]
+                        <p />
+                        <div class="collapse" id="chang2019vine">
+                            <code>
+                                @inproceedings{chang2019vine,
+                                <br>&nbsp; title={Vine Copula Structure Learning via Monte Carlo Tree Search},
+                                <br>&nbsp; author={Chang, Bo and Pan, Shenyi and Joe, Harry},
+                                <br>&nbsp; booktitle={International Conference on Artificial Intelligence and Statistics},
+                                <br>&nbsp; year={2019}
+                                <br> }
+                            </code>
+                        </div>
+                        <p />
+                    </li>
+                    <li>
                         <b>Modular Generative Adversarial Networks </b>
                         <br>
                         <a href="https://www.zhaobo.me/">Bo Zhao</a>,
@@ -284,13 +331,13 @@
                         <a href="https://bochang.me/blog/posts/bandits/">Stochastic Bandits and UCB Algorithm</a>
                         <br> December 8, 2018
                         <p />
-                    </li>                    
+                    </li>
                     <li>
                         <a href="https://bochang.me/blog/posts/latex/">A Few LaTeX Tips</a>
                         <br> November 10, 2018
                     </li>
                 </ul>
-            </div>            
+            </div>
             <div class="tab-pane fade" id="contact">
                 <h3>Address</h3>
                 <address>
