--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <div class="collapse" id="chang2019antisymmetric">
                             <code>
                                 @inproceedings{chang2019antisymmetric,
-                                <br>&nbsp; title={AntisymmetricRNN: A Dynamical System View on Recurrent Neural Networks},
+                                <br>&nbsp; title={Antisymmetric{RNN}: A Dynamical System View on Recurrent Neural Networks},
                                 <br>&nbsp; author={Chang, Bo and Chen, Minmin and Haber, Eldad and Chi, Ed H},
                                 <br>&nbsp; booktitle={International Conference on Learning Representations},
                                 <br>&nbsp; year={2019},
