--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
                 <footer>* Equal Contribution</footer>
                 <br>
                 <a href="https://scholar.google.com/citations?user=s9F-vo0AAAAJ"><img src="https://scholar.google.com/intl/en/scholar/images/1x/scholar_logo_64dp.png" class="img-responsive" width="25%"></a>
+                <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0001-7429-7212" href="https://orcid.org/0000-0001-7429-7212" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-7429-7212</a></div>
             </div>
             <div class="tab-pane fade" id="blog">
                 <h3>Posts</h3>
