--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     <li>
                         <b>Vine Regression </b>
                         <br>
-                        <a href="http://rogermcooke.net/">Roger M Cooke</a>,
+                        <a href="http://rogermcooke.net/">Roger M. Cooke</a>,
                         <a href="https://www.stat.ubc.ca/~harry/">Harry Joe</a>,
                         <a href="#">Bo Chang</a>
                         <br> Resources for the Future Discussion Paper, 15&ndash;52.
