--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="collapse" id="gilboa2019dynamical">
               <code>
                 @article{gilboa2019dynamical,
-                <br>&nbsp;  title={Dynamical Isometry and a Mean Field Theory of {LSTM}s and {GRU}s},
+                <br>&nbsp;  title={Dynamical isometry and a mean field theory of {LSTM}s and {GRU}s},
                 <br>&nbsp;  author={Gilboa, Dar and Chang, Bo and Chen, Minmin and Yang, Greg and Schoenholz, Samuel S and Chi, Ed H and Pennington, Jeffrey},
                 <br>&nbsp;  journal={arXiv preprint arXiv:1901.08987},
                 <br>&nbsp;  year={2019}
@@ -109,7 +109,7 @@
             <div class="collapse" id="meng2018where">
               <code>
                 @article{meng2018where,
-                <br>&nbsp;  title={Where and When to Look? Spatio-temporal Attention for Action Recognition in Videos},
+                <br>&nbsp;  title={Where and when to look? spatio-temporal attention for action recognition in videos},
                 <br>&nbsp;  author={Meng, Lili and Zhao, Bo and Chang, Bo and Huang, Gao and Tung, Frederick and Sigal, Leonid},
                 <br>&nbsp;  journal={arXiv preprint arXiv:1810.04511},
                 <br>&nbsp;  year={2018}
@@ -154,7 +154,7 @@
             <div class="collapse" id="zhu2018convolutional">
               <code>
                 @article{zhu2018convolutional,
-                <br>&nbsp;  title={Convolutional Neural Networks combined with Runge-Kutta Methods},
+                <br>&nbsp;  title={Convolutional neural networks combined with {R}unge-{K}utta methods},
                 <br>&nbsp;  author={Zhu, Mai and Chang, Bo and Fu, Chong},
                 <br>&nbsp;  journal={arXiv preprint arXiv:1802.08831},
                 <br>&nbsp;  year={2018}
@@ -181,7 +181,7 @@
             <div class="collapse" id="chang2019antisymmetric">
               <code>
                 @inproceedings{chang2019antisymmetric,
-                <br>&nbsp; title={Antisymmetric{RNN}: A Dynamical System View on Recurrent Neural Networks},
+                <br>&nbsp; title={Antisymmetric{RNN}: a dynamical system view on recurrent neural networks},
                 <br>&nbsp; author={Chang, Bo and Chen, Minmin and Haber, Eldad and Chi, Ed H},
                 <br>&nbsp; booktitle={International Conference on Learning Representations},
                 <br>&nbsp; year={2019},
@@ -204,7 +204,7 @@
             <div class="collapse" id="chang2019vine">
               <code>
                 @inproceedings{chang2019vine,
-                <br>&nbsp; title={Vine Copula Structure Learning via Monte Carlo Tree Search},
+                <br>&nbsp; title={Vine copula structure learning via {M}onte {C}arlo tree search},
                 <br>&nbsp; author={Chang, Bo and Pan, Shenyi and Joe, Harry},
                 <br>&nbsp; booktitle={International Conference on Artificial Intelligence and Statistics},
                 <br>&nbsp; year={2019}
@@ -230,7 +230,7 @@
             <div class="collapse" id="zhao2018modular">
               <code>
                 @inproceedings{zhao2018modular,
-                <br>&nbsp;  title={Modular Generative Adversarial Networks},
+                <br>&nbsp;  title={Modular generative adversarial networks},
                 <br>&nbsp;  author={Zhao, Bo and Chang, Bo and Jie, Zequn and Sigal, Leonid},
                 <br>&nbsp;  booktitle={European Conference on Computer Vision},
                 <br>&nbsp;  year={2018}
@@ -256,7 +256,7 @@
             <div class="collapse" id="chang2018multilevel">
               <code>
                 @inproceedings{chang2018multilevel,
-                <br>&nbsp; title={Multi-level Residual Networks from Dynamical Systems View},
+                <br>&nbsp; title={Multi-level residual networks from dynamical systems view},
                 <br>&nbsp; author={Chang, Bo and Meng, Lili and Haber, Eldad and Tung, Frederick and Begert, David},
                 <br>&nbsp; booktitle={International Conference on Learning Representations},
                 <br>&nbsp; year={2018},
@@ -283,7 +283,7 @@
             <div class="collapse" id="chang2018generating">
               <code>
                 @inproceedings{chang2018generating,
-                <br>&nbsp;   title={Generating Handwritten Chinese Characters Using CycleGAN},
+                <br>&nbsp;   title={Generating handwritten {C}hinese characters using {C}ycle{GAN}},
                 <br>&nbsp;   author={Chang, Bo and Zhang, Qiong and Pan, Shenyi and Meng, Lili},
                 <br>&nbsp;   booktitle={IEEE Winter Conference on Applications of Computer Vision},
                 <br>&nbsp;   year={2018}
@@ -310,7 +310,7 @@
             <div class="collapse" id="chang2018reversible">
               <code>
                 @inproceedings{chang2018reversible,
-                <br>&nbsp;  title={Reversible Architectures for Arbitrarily Deep Residual Neural Networks},
+                <br>&nbsp;  title={Reversible architectures for arbitrarily deep residual neural networks},
                 <br>&nbsp;  author={Chang, Bo and Meng, Lili and Haber, Eldad and Ruthotto, Lars and Begert, David and Holtham, Elliot},
                 <br>&nbsp;  booktitle={AAAI Conference on Artificial Intelligence},
                 <br>&nbsp;  year={2018}
