--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@
         <h3>Posts</h3>
         <ul>
           <li>
+            <a href="https://bochang.me/blog/posts/tsp/">Traveling Salesman Problem and Approximation Algorithms</a>
+            <br> February 10, 2019
+            <p />
+          </li>          
+          <li>
             <a href="https://bochang.me/blog/posts/bandits/">Stochastic Bandits and UCB Algorithm</a>
             <br> December 8, 2018
             <p />
