--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                 <br>&nbsp;  title={Modular generative adversarial networks},
                 <br>&nbsp;  author={Zhao, Bo and Chang, Bo and Jie, Zequn and Sigal, Leonid},
                 <br>&nbsp;  booktitle={European Conference on Computer Vision},
+                <br>&nbsp;  pages={150--165},
                 <br>&nbsp;  year={2018}
                 <br>}
               </code>
@@ -286,6 +287,7 @@
                 <br>&nbsp;   title={Generating handwritten {C}hinese characters using {C}ycle{GAN}},
                 <br>&nbsp;   author={Chang, Bo and Zhang, Qiong and Pan, Shenyi and Meng, Lili},
                 <br>&nbsp;   booktitle={IEEE Winter Conference on Applications of Computer Vision},
+                <br>&nbsp;   pages={199--207},                
                 <br>&nbsp;   year={2018}
                 <br>}
               </code>
