--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed H. Chi</a>
             <br> International Conference on Learning Representations (ICLR), 2019.
             <br>
+            [<a href="https://arxiv.org/abs/1902.09689">arXiv</a>]            
             [<a href="https://openreview.net/forum?id=ryxepo0cFX">OpenReview</a>]
             [<a data-toggle="collapse" href="#chang2019antisymmetric">BibTeX</a>]
             <p />
