--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>
             <br> International Conference on Artificial Intelligence and Statistics (AISTATS), 2019.
             <br>
+            [<a href="http://proceedings.mlr.press/v89/chang19a.html">Proceedings</a>]
             [<a data-toggle="collapse" href="#chang2019vine">BibTeX</a>]
             <p />
             <div class="collapse" id="chang2019vine">
