--- a/index.html
+++ b/index.html
@@ -119,28 +119,6 @@
             <p />
           </li>
           <li>
-            <b>Prediction Based on Conditional Distributions of Vine Copulas </b>
-            <br>
-            <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>
-            <br> Preprint, 2018.
-            <br>
-            [<a href="https://arxiv.org/abs/1807.08429">arXiv</a>]
-            [<a data-toggle="collapse" href="#chang2018prediction">BibTeX</a>]
-            <p />
-            <div class="collapse" id="chang2018prediction">
-              <code>
-                @article{chang2018prediction,
-                <br>&nbsp;  title={Prediction based on conditional distributions of vine copulas},
-                <br>&nbsp;  author={Chang, Bo and Joe, Harry},
-                <br>&nbsp;  journal={arXiv preprint arXiv:1807.08429},
-                <br>&nbsp;  year={2018}
-                <br>}
-              </code>
-            </div>
-            <p />
-          </li>
-          <li>
             <b>Convolutional Neural Networks Combined with Runge-Kutta Methods </b>
             <br>
             <a href="https://scholar.google.com/citations?user=i1Qj3CoAAAAJ">Mai Zhu</a>,
@@ -166,6 +144,28 @@
         </ul>
         <h3>Peer-Reviewed Articles</h3>
         <ul>
+          <li>
+            <b>Prediction Based on Conditional Distributions of Vine Copulas </b>
+            <br>
+            <a href="#">Bo Chang</a>,
+            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>
+            <br> Computational Statistics & Data Analysis, to appear.
+            <br>
+            [<a href="https://arxiv.org/abs/1807.08429">arXiv</a>]
+            [<a data-toggle="collapse" href="#chang2019prediction">BibTeX</a>]
+            <p />
+            <div class="collapse" id="chang2019prediction">
+              <code>
+                @article{chang2019prediction,
+                <br>&nbsp;  title={Prediction based on conditional distributions of vine copulas},
+                <br>&nbsp;  author={Chang, Bo and Joe, Harry},
+                <br>&nbsp;  journal={Computational Statistics \& Data Analysis},
+                <br>&nbsp;  year={2019}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>          
           <li>
             <b>AntisymmetricRNN: A Dynamical System View on Recurrent Neural Networks </b>
             <br>
