Remove contact tab

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
       <li><a href="#bio" data-toggle="tab">BIO</a></li>
       <li><a href="#publications" data-toggle="tab">PUBLICATIONS</a></li>
       <li><a href="#blog" data-toggle="tab">BLOG</a></li>
-      <li><a href="#contact" data-toggle="tab">CONTACT</a></li>
     </ul>
     <br>
     <div class="tab-content">
@@ -42,7 +41,16 @@
         <table>
           <tr>
             <td width="40%"><img src="pic.jpg" class="img-responsive" width="90%"></td>
-            <td>I'm a Ph.D. candidate in the <a href="https://www.stat.ubc.ca/">Department of Statistics</a>, <a href="https://www.ubc.ca/">University of British Columbia</a>. My advisor is <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Professor Harry Joe</a>.
+            <td>
+              I'm a Ph.D. candidate in the <a href="https://www.stat.ubc.ca/">Department of Statistics</a>, <a href="https://www.ubc.ca/">University of British Columbia</a>. My advisor is <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Professor Harry Joe</a>.
+              <p />
+              <address>
+                Email:
+                <script type="text/javascript">
+                var s = "bchang" + "astat.ubc.ca".replace("a", "#").replace("#", "@");
+                document.write("<a href=\"mailt" + "o:" + s + "\">" + s + "</a>");
+                </script>
+              </address>
             </td>
           </tr>
         </table>
@@ -50,16 +58,16 @@
       <div class="tab-pane fade" id="bio">
         <h3>Education</h3>
         <ul>
-          <li><a href="https://www.stat.ubc.ca/">University of British Columbia</a>, Ph.D. (Statistics), 2014 - Now</li>
-          <li><a href="http://statistics.ucla.edu/">University of California, Los Angeles</a>, M.S. (Statistics), 2011 - 2012</li>
-          <li><a href="http://english.math.pku.edu.cn/">Peking University</a>, B.S. (Mathematics), B.A. (Economics), 2007 - 2011</li>
+          <li><a href="https://www.stat.ubc.ca/">University of British Columbia</a>, Ph.D. (Statistics), 2014&ndash;Now</li>
+          <li><a href="http://statistics.ucla.edu/">University of California, Los Angeles</a>, M.S. (Statistics), 2011&ndash;2012</li>
+          <li><a href="http://english.math.pku.edu.cn/">Peking University</a>, B.S. (Mathematics), B.A. (Economics), 2007&ndash;2011</li>
         </ul>
         <h3>Employment</h3>
         <ul>
           <li><a href="https://ai.google/brain-team/">Google Brain</a>, Software Engineering Intern, Summer 2018</li>
           <li><a href="https://xtract.ai/">Xtract Technologies</a>, Research Intern, Summer 2017</li>
-          <li><a href="https://www.itg.com/">Investment Technology Group</a>, Analyst, 2013 - 2014</li>
-          <li><a href="https://www.baidu.com/">Baidu</a>, Data Science Intern, 2010 - 2011</li>
+          <li><a href="https://www.itg.com/">Investment Technology Group</a>, Analyst, 2013&ndash;2014</li>
+          <li><a href="https://www.baidu.com/">Baidu</a>, Data Science Intern, 2010&ndash;2011</li>
         </ul>
       </div>
       <div class="tab-pane fade" id="publications">
@@ -83,11 +91,11 @@
             <div class="collapse" id="gilboa2019dynamical">
               <code>
                 @article{gilboa2019dynamical,
-                <br>&nbsp;  title={Dynamical isometry and a mean field theory of {LSTM}s and {GRU}s},
-                <br>&nbsp;  author={Gilboa, Dar and Chang, Bo and Chen, Minmin and Yang, Greg and Schoenholz, Samuel S and Chi, Ed H and Pennington, Jeffrey},
-                <br>&nbsp;  journal={arXiv preprint arXiv:1901.08987},
-                <br>&nbsp;  year={2019}
-                <br>}                                
+                <br>&nbsp; title={Dynamical isometry and a mean field theory of {LSTM}s and {GRU}s},
+                <br>&nbsp; author={Gilboa, Dar and Chang, Bo and Chen, Minmin and Yang, Greg and Schoenholz, Samuel S and Chi, Ed H and Pennington, Jeffrey},
+                <br>&nbsp; journal={arXiv preprint arXiv:1901.08987},
+                <br>&nbsp; year={2019}
+                <br>}
               </code>
             </div>
             <p />
@@ -109,11 +117,11 @@
             <div class="collapse" id="meng2018where">
               <code>
                 @article{meng2018where,
-                <br>&nbsp;  title={Where and when to look? spatio-temporal attention for action recognition in videos},
-                <br>&nbsp;  author={Meng, Lili and Zhao, Bo and Chang, Bo and Huang, Gao and Tung, Frederick and Sigal, Leonid},
-                <br>&nbsp;  journal={arXiv preprint arXiv:1810.04511},
-                <br>&nbsp;  year={2018}
-                <br>}                                
+                <br>&nbsp; title={Where and when to look? spatio-temporal attention for action recognition in videos},
+                <br>&nbsp; author={Meng, Lili and Zhao, Bo and Chang, Bo and Huang, Gao and Tung, Frederick and Sigal, Leonid},
+                <br>&nbsp; journal={arXiv preprint arXiv:1810.04511},
+                <br>&nbsp; year={2018}
+                <br>}
               </code>
             </div>
             <p />
@@ -132,10 +140,10 @@
             <div class="collapse" id="zhu2018convolutional">
               <code>
                 @article{zhu2018convolutional,
-                <br>&nbsp;  title={Convolutional neural networks combined with {R}unge-{K}utta methods},
-                <br>&nbsp;  author={Zhu, Mai and Chang, Bo and Fu, Chong},
-                <br>&nbsp;  journal={arXiv preprint arXiv:1802.08831},
-                <br>&nbsp;  year={2018}
+                <br>&nbsp; title={Convolutional neural networks combined with {R}unge-{K}utta methods},
+                <br>&nbsp; author={Zhu, Mai and Chang, Bo and Fu, Chong},
+                <br>&nbsp; journal={arXiv preprint arXiv:1802.08831},
+                <br>&nbsp; year={2018}
                 <br>}
               </code>
             </div>
@@ -157,15 +165,15 @@
             <div class="collapse" id="chang2019prediction">
               <code>
                 @article{chang2019prediction,
-                <br>&nbsp;  title={Prediction based on conditional distributions of vine copulas},
-                <br>&nbsp;  author={Chang, Bo and Joe, Harry},
-                <br>&nbsp;  journal={Computational Statistics \& Data Analysis},
-                <br>&nbsp;  year={2019}
+                <br>&nbsp; title={Prediction based on conditional distributions of vine copulas},
+                <br>&nbsp; author={Chang, Bo and Joe, Harry},
+                <br>&nbsp; journal={Computational Statistics \& Data Analysis},
+                <br>&nbsp; year={2019}
                 <br>}
               </code>
             </div>
             <p />
-          </li>          
+          </li>
           <li>
             <b>AntisymmetricRNN: A Dynamical System View on Recurrent Neural Networks </b>
             <br>
@@ -175,7 +183,7 @@
             <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed H. Chi</a>
             <br> International Conference on Learning Representations (ICLR), 2019.
             <br>
-            [<a href="https://arxiv.org/abs/1902.09689">arXiv</a>]            
+            [<a href="https://arxiv.org/abs/1902.09689">arXiv</a>]
             [<a href="https://openreview.net/forum?id=ryxepo0cFX">OpenReview</a>]
             [<a data-toggle="collapse" href="#chang2019antisymmetric">BibTeX</a>]
             <p />
@@ -232,11 +240,11 @@
             <div class="collapse" id="zhao2018modular">
               <code>
                 @inproceedings{zhao2018modular,
-                <br>&nbsp;  title={Modular generative adversarial networks},
-                <br>&nbsp;  author={Zhao, Bo and Chang, Bo and Jie, Zequn and Sigal, Leonid},
-                <br>&nbsp;  booktitle={European Conference on Computer Vision},
-                <br>&nbsp;  pages={150--165},
-                <br>&nbsp;  year={2018}
+                <br>&nbsp; title={Modular generative adversarial networks},
+                <br>&nbsp; author={Zhao, Bo and Chang, Bo and Jie, Zequn and Sigal, Leonid},
+                <br>&nbsp; booktitle={European Conference on Computer Vision},
+                <br>&nbsp; pages={150--165},
+                <br>&nbsp; year={2018}
                 <br>}
               </code>
             </div>
@@ -286,11 +294,11 @@
             <div class="collapse" id="chang2018generating">
               <code>
                 @inproceedings{chang2018generating,
-                <br>&nbsp;   title={Generating handwritten {C}hinese characters using {C}ycle{GAN}},
-                <br>&nbsp;   author={Chang, Bo and Zhang, Qiong and Pan, Shenyi and Meng, Lili},
-                <br>&nbsp;   booktitle={IEEE Winter Conference on Applications of Computer Vision},
-                <br>&nbsp;   pages={199--207},                
-                <br>&nbsp;   year={2018}
+                <br>&nbsp; title={Generating handwritten {C}hinese characters using {C}ycle{GAN}},
+                <br>&nbsp; author={Chang, Bo and Zhang, Qiong and Pan, Shenyi and Meng, Lili},
+                <br>&nbsp; booktitle={IEEE Winter Conference on Applications of Computer Vision},
+                <br>&nbsp; pages={199--207},
+                <br>&nbsp; year={2018}
                 <br>}
               </code>
             </div>
@@ -314,10 +322,10 @@
             <div class="collapse" id="chang2018reversible">
               <code>
                 @inproceedings{chang2018reversible,
-                <br>&nbsp;  title={Reversible architectures for arbitrarily deep residual neural networks},
-                <br>&nbsp;  author={Chang, Bo and Meng, Lili and Haber, Eldad and Ruthotto, Lars and Begert, David and Holtham, Elliot},
-                <br>&nbsp;  booktitle={AAAI Conference on Artificial Intelligence},
-                <br>&nbsp;  year={2018}
+                <br>&nbsp; title={Reversible architectures for arbitrarily deep residual neural networks},
+                <br>&nbsp; author={Chang, Bo and Meng, Lili and Haber, Eldad and Ruthotto, Lars and Begert, David and Holtham, Elliot},
+                <br>&nbsp; booktitle={AAAI Conference on Artificial Intelligence},
+                <br>&nbsp; year={2018}
                 <br>}
               </code>
             </div>
@@ -332,7 +340,7 @@
             <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger M. Cooke</a>,
             <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>,
             <a href="#">Bo Chang</a>
-            <br> Resources for the Future Discussion Paper, 15&ndash;52.
+            <br> Resources for the Future Discussion Paper, 15-52.
             <br>
             [<a href="https://ssrn.com/abstract=2695063">SSRN</a>]
             [<a data-toggle="collapse" href="#cooke2015vine">BibTeX</a>]
@@ -343,7 +351,7 @@
                 <br>&nbsp; title={Vine regression},
                 <br>&nbsp; author={Cooke, Roger M and Joe, Harry and Chang, Bo},
                 <br>&nbsp; journal={Resources for the Future Discussion Paper},
-                <br>&nbsp; volume={15--52},
+                <br>&nbsp; volume={15-52},
                 <br>&nbsp; year={2015}
                 <br>}
               </code>
@@ -363,7 +371,7 @@
             <a href="https://bochang.me/blog/posts/tsp/">Traveling Salesman Problem and Approximation Algorithms</a>
             <br> February 10, 2019
             <p />
-          </li>          
+          </li>
           <li>
             <a href="https://bochang.me/blog/posts/bandits/">Stochastic Bandits and UCB Algorithm</a>
             <br> December 8, 2018
@@ -374,22 +382,6 @@
             <br> November 10, 2018
           </li>
         </ul>
-      </div>
-      <div class="tab-pane fade" id="contact">
-        <h3>Address</h3>
-        <address>
-          Bo Chang
-          <br> 3182 Earth Sciences Building
-          <br> 2207 Main Mall
-          <br> Vancouver, BC, Canada V6T 1Z4
-        </address>
-        <h3>Email</h3>
-        <address>
-          <script type="text/javascript">
-          var s = "bchang" + "astat.ubc.ca".replace("a", "#").replace("#", "@");
-          document.write("<a href=\"mailt" + "o:" + s + "\">" + s + "</a>");
-          </script>
-        </address>
       </div>
     </div>
   </div>
