--- a/index.html
+++ b/index.html
@@ -368,6 +368,11 @@
         <h3>Posts</h3>
         <ul>
           <li>
+            <a href="https://bochang.me/blog/posts/copula/">Copula: A Very Short Introduction</a>
+            <br> May 8, 2019
+            <p />
+          </li>
+          <li>
             <a href="https://bochang.me/blog/posts/tsp/">Traveling Salesman Problem and Approximation Algorithms</a>
             <br> February 10, 2019
             <p />
