--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
             <br>
             <a href="#">Bo Chang</a>,
             <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>
-            <br> Computational Statistics & Data Analysis, to appear.
+            <br> Computational Statistics & Data Analysis, 2019.
             <br>
             [<a href="https://arxiv.org/abs/1807.08429">arXiv</a>]
+            [<a href="https://doi.org/10.1016/j.csda.2019.04.015">Journal</a>]
             [<a data-toggle="collapse" href="#chang2019prediction">BibTeX</a>]
             <p />
             <div class="collapse" id="chang2019prediction">
@@ -168,6 +169,8 @@
                 <br>&nbsp; title={Prediction based on conditional distributions of vine copulas},
                 <br>&nbsp; author={Chang, Bo and Joe, Harry},
                 <br>&nbsp; journal={Computational Statistics \& Data Analysis},
+                <br>&nbsp; volume={139},
+                <br>&nbsp; pages={45--63}
                 <br>&nbsp; year={2019}
                 <br>}
               </code>
