--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
                 <br>&nbsp; author={Chang, Bo and Joe, Harry},
                 <br>&nbsp; journal={Computational Statistics \& Data Analysis},
                 <br>&nbsp; volume={139},
-                <br>&nbsp; pages={45--63}
-                <br>&nbsp; year={2019}
+                <br>&nbsp; pages={45--63},
+                <br>&nbsp; year={2019},
+                <br>&nbsp; publisher={Elsevier}
                 <br>}
               </code>
             </div>
