--- a/index.html
+++ b/index.html
@@ -153,6 +153,29 @@
         <h3>Peer-Reviewed Articles</h3>
         <ul>
           <li>
+            <b>Vine Copula Regression for Observational Studies </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger M. Cooke</a>,
+            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>,
+            <a href="#">Bo Chang</a>
+            <br> AStA Advances in Statistical Analysis, to appear.
+            <br>
+            [<a data-toggle="collapse" href="#cooke2019vine">BibTeX</a>]
+            <p />
+            <div class="collapse" id="cooke2019vine">
+              <code>
+                @article{cooke2019vine,
+                <br>&nbsp; title={Vine copula regression for observational studies},
+                <br>&nbsp; author={Cooke, Roger M and Joe, Harry and Chang, Bo},
+                <br>&nbsp; journal={AStA Advances in Statistical Analysis},
+                <br>&nbsp; pages={to appear},
+                <br>&nbsp; year={2019}.
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>
+          <li>
             <b>Prediction Based on Conditional Distributions of Vine Copulas </b>
             <br>
             <a href="#">Bo Chang</a>,
