--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <br>
             <a href="#">Bo Chang</a>,
             <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>
-            <br> Computational Statistics & Data Analysis, 2019.
+            <br> Computational Statistics & Data Analysis 139: 45&ndash;63, 2019.
             <br>
             [<a href="https://arxiv.org/abs/1807.08429">arXiv</a>]
             [<a href="https://doi.org/10.1016/j.csda.2019.04.015">Journal</a>]
