--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             <a href="#">Bo Chang</a>
             <br> AStA Advances in Statistical Analysis, to appear.
             <br>
+            [<a href="https://doi.org/10.1007/s10182-019-00353-5">Journal</a>]
             [<a data-toggle="collapse" href="#cooke2019vine">BibTeX</a>]
             <p />
             <div class="collapse" id="cooke2019vine">
@@ -168,7 +169,6 @@
                 <br>&nbsp; title={Vine copula regression for observational studies},
                 <br>&nbsp; author={Cooke, Roger M and Joe, Harry and Chang, Bo},
                 <br>&nbsp; journal={AStA Advances in Statistical Analysis},
-                <br>&nbsp; pages={to appear},
                 <br>&nbsp; year={2019}.
                 <br>}
               </code>
