--- a/index.html
+++ b/index.html
@@ -359,6 +359,34 @@
             <p />
           </li>
         </ul>
+        <h3>Dissertation</h3>
+        <ul>
+          <li>
+            <b>Vine Copulas: Dependence Structure Learning, Diagnostics, and Applications to Regression Analysis </b>
+            <br>
+            <a href="#">Bo Chang</a>
+            <br> University of British Columbia, 2019.
+            <br>
+            [<a href="http://hdl.handle.net/2429/70869">UBC Library</a>]
+            [<a data-toggle="collapse" href="#chang2019vinecopulas">BibTeX</a>]
+            <p />
+            <div class="collapse" id="chang2019vinecopulas">
+              <code>
+                @phdthesis{chang2019vinecopulas, 
+                <br>&nbsp; series={Electronic Theses and Dissertations (ETDs) 2008+}, 
+                <br>&nbsp; title={Vine copulas: dependence structure learning, diagnostics, and applications to regression analysis}, 
+                <br>&nbsp; url={https://open.library.ubc.ca/collections/ubctheses/24/items/1.0379699}, 
+                <br>&nbsp; DOI={http://dx.doi.org/10.14288/1.0379699}, 
+                <br>&nbsp; school={University of British Columbia}, 
+                <br>&nbsp; author={Chang, Bo}, 
+                <br>&nbsp; year={2019}, 
+                <br>&nbsp; collection={Electronic Theses and Dissertations (ETDs) 2008+}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>
+        </ul>
         <h3>Technical Reports</h3>
         <ul>
           <li>
