--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <p />
           </li>
           <li>
-            <b>Convolutional Neural Networks Combined with Runge-Kutta Methods </b>
+            <b>Convolutional Neural Networks Combined with Runge–Kutta Methods </b>
             <br>
             <a href="https://scholar.google.com/citations?user=i1Qj3CoAAAAJ">Mai Zhu</a>,
             <a href="#">Bo Chang</a>,
