--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
             <br> International Conference on Artificial Intelligence and Statistics (AISTATS), 2019.
             <br>
             [<a href="http://proceedings.mlr.press/v89/chang19a.html">Proceedings</a>]
+            [<a href="https://github.com/changebo/Vine_MCTS">GitHub</a>]            
             [<a data-toggle="collapse" href="#chang2019vine">BibTeX</a>]
             <p />
             <div class="collapse" id="chang2019vine">
