--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             <a href="#">Bo Chang</a>
             <br> University of British Columbia, 2019.
             <br>
-            [<a href="http://hdl.handle.net/2429/70869">UBC Library</a>]
+            [<a href="https://dx.doi.org/10.14288/1.0379699">UBC Library</a>]
             [<a data-toggle="collapse" href="#chang2019vinecopulas">BibTeX</a>]
             <p />
             <div class="collapse" id="chang2019vinecopulas">
