--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <tr>
             <td width="40%"><img src="pic.jpg" class="img-responsive" width="90%"></td>
             <td>
-              I'm a Ph.D. candidate in the <a href="https://www.stat.ubc.ca/">Department of Statistics</a>, <a href="https://www.ubc.ca/">University of British Columbia</a>. My advisor is <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Professor Harry Joe</a>.
+              I'm a machine learning researcher at <a href="https://www.borealisai.com/en/">Borealis AI</a>, based in Toronto, Canada. Prior to that, I did my Ph.D. at the <a href="https://www.ubc.ca/">University of British Columbia</a>, where my advisor was <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Professor Harry Joe</a>.
               <p />
               <address>
                 Email:
@@ -58,12 +58,13 @@
       <div class="tab-pane fade" id="bio">
         <h3>Education</h3>
         <ul>
-          <li><a href="https://www.stat.ubc.ca/">University of British Columbia</a>, Ph.D. (Statistics), 2014&ndash;Now</li>
+          <li><a href="https://www.stat.ubc.ca/">University of British Columbia</a>, Ph.D. (Statistics), 2014&ndash;2019</li>
           <li><a href="http://statistics.ucla.edu/">University of California, Los Angeles</a>, M.S. (Statistics), 2011&ndash;2012</li>
           <li><a href="http://english.math.pku.edu.cn/">Peking University</a>, B.S. (Mathematics), B.A. (Economics), 2007&ndash;2011</li>
         </ul>
         <h3>Employment</h3>
         <ul>
+          <li><a href="https://www.borealisai.com/en/">Borealis AI</a>, Machine Learning Researcher, 2019&ndash;Now</li>
           <li><a href="https://ai.google/brain-team/">Google Brain</a>, Software Engineering Intern, Summer 2018</li>
           <li><a href="https://xtract.ai/">Xtract Technologies</a>, Research Intern, Summer 2017</li>
           <li><a href="https://www.itg.com/">Investment Technology Group</a>, Analyst, 2013&ndash;2014</li>
