--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="UBC, statistics, machine learning, deep learning, neural networks, research" />
-  <meta name="description" content="I'm a Ph.D. candidate in the Department of Statistics, University of British Columbia." />
+  <meta name="description" content="I'm a machine learning researcher at Borealis AI, based in Toronto, Canada." />
   <link rel="shortcut icon" href="https://cdn.ubc.ca/clf/7.0.4/img/favicon.ico">
   <title>Bo Chang</title>
   <br>
