--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <br> International Conference on Artificial Intelligence and Statistics (AISTATS), 2019.
             <br>
             [<a href="http://proceedings.mlr.press/v89/chang19a.html">Proceedings</a>]
-            [<a href="https://github.com/changebo/Vine_MCTS">GitHub</a>]            
+            [<a href="https://github.com/changebo/Vine_MCTS">GitHub</a>]
             [<a data-toggle="collapse" href="#chang2019vine">BibTeX</a>]
             <p />
             <div class="collapse" id="chang2019vine">
@@ -374,14 +374,14 @@
             <p />
             <div class="collapse" id="chang2019vinecopulas">
               <code>
-                @phdthesis{chang2019vinecopulas, 
-                <br>&nbsp; series={Electronic Theses and Dissertations (ETDs) 2008+}, 
-                <br>&nbsp; title={Vine copulas: dependence structure learning, diagnostics, and applications to regression analysis}, 
-                <br>&nbsp; url={https://open.library.ubc.ca/collections/ubctheses/24/items/1.0379699}, 
-                <br>&nbsp; DOI={http://dx.doi.org/10.14288/1.0379699}, 
-                <br>&nbsp; school={University of British Columbia}, 
-                <br>&nbsp; author={Chang, Bo}, 
-                <br>&nbsp; year={2019}, 
+                @phdthesis{chang2019vinecopulas,
+                <br>&nbsp; series={Electronic Theses and Dissertations (ETDs) 2008+},
+                <br>&nbsp; title={Vine copulas: dependence structure learning, diagnostics, and applications to regression analysis},
+                <br>&nbsp; url={https://open.library.ubc.ca/collections/ubctheses/24/items/1.0379699},
+                <br>&nbsp; DOI={http://dx.doi.org/10.14288/1.0379699},
+                <br>&nbsp; school={University of British Columbia},
+                <br>&nbsp; author={Chang, Bo},
+                <br>&nbsp; year={2019},
                 <br>&nbsp; collection={Electronic Theses and Dissertations (ETDs) 2008+}
                 <br>}
               </code>
@@ -425,10 +425,15 @@
         <h3>Posts</h3>
         <ul>
           <li>
+            <a href="https://bochang.me/blog/posts/pytorch-distributions/">Understanding Shapes in PyTorch Distributions Package</a>
+            <br> October 20, 2019
+            <p />
+          </li>          
+          <li>
             <a href="https://bochang.me/blog/posts/iwae/">Importance Weighted Autoencoders and Jackknife Methods</a>
             <br> August 9, 2019
             <p />
-          </li>          
+          </li>
           <li>
             <a href="https://bochang.me/blog/posts/copula/">Copula: A Very Short Introduction</a>
             <br> May 8, 2019
