--- a/index.html
+++ b/index.html
@@ -102,32 +102,6 @@
             <p />
           </li>
           <li>
-            <b>Where and When to Look? Spatio-temporal Attention for Action Recognition in Videos </b>
-            <br>
-            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili Meng</a>,
-            <a href="https://scholar.google.com/citations?user=a8OCiUEAAAAJ">Bo Zhao</a>,
-            <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ">Gao Huang</a>,
-            <a href="https://scholar.google.com/citations?user=T4EeZ9gAAAAJ">Frederick Tung</a>,
-            <a href="https://scholar.google.com/citations?user=Ywx45aQAAAAJ">Leonid Sigal</a>
-            <br> Preprint, 2018.
-            <br>
-            [<a href="https://arxiv.org/abs/1810.04511">arXiv</a>]
-            [<a data-toggle="collapse" href="#meng2018where">BibTeX</a>]
-            <p />
-            <div class="collapse" id="meng2018where">
-              <code>
-                @article{meng2018where,
-                <br>&nbsp; title={Where and when to look? spatio-temporal attention for action recognition in videos},
-                <br>&nbsp; author={Meng, Lili and Zhao, Bo and Chang, Bo and Huang, Gao and Tung, Frederick and Sigal, Leonid},
-                <br>&nbsp; journal={arXiv preprint arXiv:1810.04511},
-                <br>&nbsp; year={2018}
-                <br>}
-              </code>
-            </div>
-            <p />
-          </li>
-          <li>
             <b>Convolutional Neural Networks Combined with Runge–Kutta Methods </b>
             <br>
             <a href="https://scholar.google.com/citations?user=i1Qj3CoAAAAJ">Mai Zhu</a>,
@@ -153,6 +127,34 @@
         </ul>
         <h3>Peer-Reviewed Articles</h3>
         <ul>
+          <li>
+            <b>Interpretable Spatio-Temporal Attention for Video Action Recognition </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili Meng</a>,
+            <a href="https://scholar.google.com/citations?user=a8OCiUEAAAAJ">Bo Zhao</a>,
+            <a href="#">Bo Chang</a>,
+            <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ">Gao Huang</a>,
+            <a href="#">Wei Sun</a>,            
+            <a href="https://scholar.google.com/citations?user=T4EeZ9gAAAAJ">Frederick Tung</a>,
+            <a href="https://scholar.google.com/citations?user=P2mG6rcAAAAJ">Leonid Sigal</a>
+            <br> International Conference on Computer Vision (ICCV) Workshops, 2019.
+            <br>
+            [<a href="https://arxiv.org/abs/1810.04511">arXiv</a>]
+            [<a href="http://openaccess.thecvf.com/content_ICCVW_2019/html/HVU/Meng_Interpretable_Spatio-Temporal_Attention_for_Video_Action_Recognition_ICCVW_2019_paper.html">Proceedings</a>]            
+            [<a data-toggle="collapse" href="#meng2018interpretable">BibTeX</a>]
+            <p />
+            <div class="collapse" id="meng2018interpretable">
+              <code>
+                @inproceedings{meng2018interpretable,
+                <br>&nbsp; title = {Interpretable Spatio-Temporal Attention for Video Action Recognition},
+                <br>&nbsp; author = {Meng, Lili and Zhao, Bo and Chang, Bo and Huang, Gao and Sun, Wei and Tung, Frederick and Sigal, Leonid},
+                <br>&nbsp; booktitle = {International Conference on Computer Vision (ICCV) Workshops},
+                <br>&nbsp; year={2019}
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>
           <li>
             <b>Vine Copula Regression for Observational Studies </b>
             <br>
@@ -258,7 +260,7 @@
             <a href="https://scholar.google.com/citations?user=a8OCiUEAAAAJ">Bo Zhao</a>,
             <a href="#">Bo Chang</a>,
             <a href="https://scholar.google.com/citations?user=4sKGNB0AAAAJ">Zequn Jie</a>,
-            <a href="https://scholar.google.com/citations?user=Ywx45aQAAAAJ">Leonid Sigal</a>
+            <a href="https://scholar.google.com/citations?user=P2mG6rcAAAAJ">Leonid Sigal</a>
             <br> European Conference on Computer Vision (ECCV), 2018.
             <br>
             [<a href="https://arxiv.org/abs/1804.03343">arXiv</a>]
@@ -325,7 +327,7 @@
                 @inproceedings{chang2018generating,
                 <br>&nbsp; title={Generating handwritten {C}hinese characters using {C}ycle{GAN}},
                 <br>&nbsp; author={Chang, Bo and Zhang, Qiong and Pan, Shenyi and Meng, Lili},
-                <br>&nbsp; booktitle={IEEE Winter Conference on Applications of Computer Vision},
+                <br>&nbsp; booktitle={Winter Conference on Applications of Computer Vision},
                 <br>&nbsp; pages={199--207},
                 <br>&nbsp; year={2018}
                 <br>}
@@ -428,7 +430,7 @@
             <a href="https://bochang.me/blog/posts/pytorch-distributions/">Understanding Shapes in PyTorch Distributions Package</a>
             <br> October 20, 2019
             <p />
-          </li>          
+          </li>
           <li>
             <a href="https://bochang.me/blog/posts/iwae/">Importance Weighted Autoencoders and Jackknife Methods</a>
             <br> August 9, 2019
