--- a/index.html
+++ b/index.html
@@ -128,6 +128,34 @@
         <h3>Peer-Reviewed Articles</h3>
         <ul>
           <li>
+            <b>Point Process Flows </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=pyfYKvYAAAAJ">Nazanin Mehrasa</a>,
+            <a href="https://scholar.google.com/citations?user=JlmzaGsAAAAJ">Ruizhi Deng</a>,
+            <a href="https://scholar.google.com/citations?user=jyVyVj4AAAAJ">Mohamed Osama Ahmed</a>,
+            <a href="#">Bo Chang</a>,
+            <a href="https://scholar.google.com/citations?user=7zKNBtgAAAAJ">Jiawei He</a>,
+            <a href="https://scholar.google.com/citations?user=89lm_XIAAAAJ">Thibaut Durand</a>,
+            <a href="https://scholar.google.com/citations?user=x2wyjkAAAAAJ">Marcus Brubaker</a>,
+            <a href="https://scholar.google.com/citations?user=Bl9FSL0AAAAJ">Greg Mori</a>
+            <br> Temporal Point Processes (TPP) Workshop at NeurIPS, 2019.
+            <br>
+            [<a href="https://arxiv.org/abs/1910.08281">arXiv</a>]
+            [<a data-toggle="collapse" href="#mehrasa2019point">BibTeX</a>]
+            <p />
+            <div class="collapse" id="mehrasa2019point">
+              <code>
+                @article{mehrasa2019point,
+                <br>&nbsp; title={Point Process Flows},
+                <br>&nbsp; author={Mehrasa, Nazanin and Deng, Ruizhi and Ahmed, Mohamed Osama and Chang, Bo and He, Jiawei and Durand, Thibaut and Brubaker, Marcus and Mori, Greg},
+                <br>&nbsp; journal={arXiv preprint arXiv:1910.08281},
+                <br>&nbsp; year={2019}.
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>
+          <li>
             <b>Vine Copula Regression for Observational Studies </b>
             <br>
             <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger M. Cooke</a>,
@@ -186,7 +214,7 @@
             <a href="#">Wei Sun</a>,
             <a href="https://scholar.google.com/citations?user=T4EeZ9gAAAAJ">Frederick Tung</a>,
             <a href="https://scholar.google.com/citations?user=P2mG6rcAAAAJ">Leonid Sigal</a>
-            <br> International Conference on Computer Vision (ICCV) Workshops, 2019.
+            <br> Holistic Video Understanding (HVU) Workshop at ICCV, 2019.
             <br>
             [<a href="https://arxiv.org/abs/1810.04511">arXiv</a>]
             [<a href="http://openaccess.thecvf.com/content_ICCVW_2019/html/HVU/Meng_Interpretable_Spatio-Temporal_Attention_for_Video_Action_Recognition_ICCVW_2019_paper.html">Proceedings</a>]
