--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <address>
                 Email:
                 <script type="text/javascript">
-                var s = "bchang" + "astat.ubc.ca".replace("a", "#").replace("#", "@");
+                var s = "contact" + "abochang.me".replace("a", "#").replace("#", "@");
                 document.write("<a href=\"mailt" + "o:" + s + "\">" + s + "</a>");
                 </script>
               </address>
