--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <a href="#">Wei&nbsp;Sun</a>,
             <a href="https://scholar.google.com/citations?user=T4EeZ9gAAAAJ">Frederick&nbsp;Tung</a>,
             <a href="https://scholar.google.com/citations?user=P2mG6rcAAAAJ">Leonid&nbsp;Sigal</a>
-            <br> Holistic Video Understanding (HVU) Workshop at ICCV, 2019.
+            <br> IEEE International Conference on Computer Vision (ICCV) Workshops, 2019.
             <br>
             [<a href="https://arxiv.org/abs/1810.04511">arXiv</a>]
             [<a href="http://openaccess.thecvf.com/content_ICCVW_2019/html/HVU/Meng_Interpretable_Spatio-Temporal_Attention_for_Video_Action_Recognition_ICCVW_2019_paper.html">Proceedings</a>]
