--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul>
           <li><a href="https://www.borealisai.com/en/">Borealis AI</a>, Machine Learning Researcher, 2019&ndash;Now</li>
           <li><a href="https://ai.google/brain-team/">Google Brain</a>, Software Engineering Intern, Summer 2018</li>
-          <li><a href="https://xtract.ai/">Xtract Technologies</a>, Research Intern, Summer 2017</li>
+          <li><a href="https://xtract.ai/">Xtract AI</a>, Research Intern, Summer 2017</li>
           <li><a href="https://www.itg.com/">Investment Technology Group</a>, Analyst, 2013&ndash;2014</li>
           <li><a href="https://www.baidu.com/">Baidu</a>, Data Science Intern, 2010&ndash;2011</li>
         </ul>
