--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <li>
             <b>Point Process Flows </b>
             <br>
-            <a href="https://scholar.google.com/citations?user=pyfYKvYAAAAJ">Nazanin&nbsp;Mehrasa</a>,
-            <a href="https://scholar.google.com/citations?user=JlmzaGsAAAAJ">Ruizhi&nbsp;Deng</a>,
+            <a href="https://scholar.google.com/citations?user=pyfYKvYAAAAJ">Nazanin&nbsp;Mehrasa</a>*,
+            <a href="https://scholar.google.com/citations?user=JlmzaGsAAAAJ">Ruizhi&nbsp;Deng</a>*,
             <a href="https://scholar.google.com/citations?user=jyVyVj4AAAAJ">Mohamed&nbsp;Osama&nbsp;Ahmed</a>,
             <a href="#">Bo&nbsp;Chang</a>,
             <a href="https://scholar.google.com/citations?user=7zKNBtgAAAAJ">Jiawei&nbsp;He</a>,
