--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <a href="#">Bo&nbsp;Chang</a>,
             <a href="https://scholar.google.com/citations?user=7zKNBtgAAAAJ">Jiawei&nbsp;He</a>,
             <a href="https://scholar.google.com/citations?user=89lm_XIAAAAJ">Thibaut&nbsp;Durand</a>,
-            <a href="https://scholar.google.com/citations?user=x2wyjkAAAAAJ">Marcus&nbsp;Brubaker</a>,
+            <a href="https://scholar.google.com/citations?user=x2wyjkAAAAAJ">Marcus&nbsp;A.&nbsp;Brubaker</a>,
             <a href="https://scholar.google.com/citations?user=Bl9FSL0AAAAJ">Greg&nbsp;Mori</a>
             <br> Temporal Point Processes (TPP) Workshop at NeurIPS, 2019.
             <br>
