--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <code>
                 @article{deng2020modeling,
                 <br>&nbsp; title={Modeling Continuous Stochastic Processes with Dynamic Normalizing Flows},
-                <br>&nbsp; author={Deng, Ruizhi and Chang, Bo and Brubaker, Marcus A. and Mori, Greg and Lehrmann, Andreas},
+                <br>&nbsp; author={Deng, Ruizhi and Chang, Bo and Brubaker, Marcus A and Mori, Greg and Lehrmann, Andreas},
                 <br>&nbsp; journal={arXiv preprint arXiv:2002.10516},
                 <br>&nbsp; year={2020}
                 <br>}
@@ -117,7 +117,7 @@
               <code>
                 @article{deng2020variational,
                 <br>&nbsp; title={Variational Hyper {RNN} for Sequence Modeling},
-                <br>&nbsp; author={Deng, Ruizhi and Cao, Yanshuai and Chang, Bo and Sigal, Leonid and Mori, Greg and Brubaker, Marcus A.},
+                <br>&nbsp; author={Deng, Ruizhi and Cao, Yanshuai and Chang, Bo and Sigal, Leonid and Mori, Greg and Brubaker, Marcus A},
                 <br>&nbsp; journal={arXiv preprint arXiv:2002.10501},
                 <br>&nbsp; year={2020}
                 <br>}
