--- a/index.html
+++ b/index.html
@@ -474,6 +474,11 @@
         <h3>Posts</h3>
         <ul>
           <li>
+            <a href="https://bochang.me/blog/posts/measure-val-grad/">Measure-Valued Gradient Estimator and Application to Variational Autoencoder</a>
+            <br> March 7, 2020
+            <p />
+          </li>          
+          <li>
             <a href="https://bochang.me/blog/posts/pytorch-distributions/">Understanding Shapes in PyTorch Distributions Package</a>
             <br> October 20, 2019
             <p />
